# FileHost

./: .gitignore  Cargo.toml  README.md  install-server.sh  setup.sh  test.crt  test.key  uninstall-server.sh
filehost-auth/: Cargo.toml
filehost-auth/src/: main.rs
filehost-cli/: Cargo.toml
filehost-cli/src/: cli.rs  errors.rs  lib.rs  main.rs
filehost-ctl/: Cargo.toml
filehost-ctl/src/: cli.rs  errors.rs  lib.rs  main.rs
filehost-prx/: Cargo.toml
filehost-prx/src/: main.rs
filehost-spc/: Cargo.toml
filehost-spc/src/: config.rs  consts.rs  ctl_messages.rs  lib.rs  login.rs
filehost-srv/: Cargo.toml
filehost-srv/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  ssl.rs  users.rs
