[package]
name = "filehost-prx"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
chrono             = "0.4"
clap               = { version = "3.2.17", features = ["derive", "env"] }
log                = "0.4.17"
reqwest            = { version = "0.11.11", features = ["blocking", "json"] }
simplelog          = "0.12.0"
tokio              = { version = "1.20.1", features = ["rt", "macros"] }
warp               = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "0.5"
