[package]
name = "filehost-srv"
version = "0.1.0"
edition = "2021"
authors = ["Lut99"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
dirs-2 = "3.0.1"
lazy_static = "1.4.0"
log = { version = "0.4.16", features = ["std"] }
simplelog = "0.11.2"
systemd-journal-logger = "0.5.0"

filehost-spc = { path = "../filehost-spc" }
