[package]
name = "filehost-srv"
version = "0.1.0"
edition = "2021"
authors = ["Lut99"]

[[bin]]
name = "filehostd"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "env"] }
dirs-2 = "3.0.1"
log = { version = "0.4.16", features = ["std", "serde"] }
nix = { version = "0.24.1", features = ["poll"] }
serde = "1.0.136"
serde_json = "1.0.79"
simplelog = "0.11.2"
systemd = "0.10.0"
systemd-journal-logger = "0.5.0"

filehost-spc = { path = "../filehost-spc" }
